-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.0, 5.11.1, 5.12
-
None
Consider this (in 5.11, non stable link):
https://doc.qt.io/qt-5/qpen.html#QPen-3
all the enumerations (and the enumerators used as default arguments) aren't linked to the respective helps. This used to work, so it's a regression (at least the links for the enumerations): https://doc.qt.io/qt-5.9/qpen.html#QPen-2
- relates to
-
QTBUG-70321 qdoc: Empty documentation generated for namespaces
-
- Closed
-
-
QTBUG-69484 Regression in QDoc: Types of function parameters, namespaces, are no longer links
-
- Closed
-
For Gerrit Dashboard: QTBUG-70231 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
238685,2 | QDoc: Link correctly to enums as function parameters | 5.11.2 | qt/qttools | Status: MERGED | +2 | 0 |