QDoc: Link correctly to enums as function parameters

Include enum type in findChildNode check, to resolve page nodes
correctly. The missing check causes QDoc to not link to enums when they
are function parameter types. This behavior constitutes a regression
from 5.10.

Task-number: QTBUG-70231
Change-Id: I57f94c08b0e207567e97127d0b7e268d90d051aa
Reviewed-by: Martin Smith <martin.smith@qt.io>